@@ -1,3 +1,7 @@
+2007-08-16  Badlop  <badlop@ono.com>
+
+	* src/mod_ctlextra.erl: add-rosteritem only adds an item in a roster.
+
 2007-08-07  Badlop  <badlop@ono.com>
 
 	* src/mod_ctlextra.erl: Fixed indentation.
